<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_control</name>
  <version>0.0.1</version>
  <description>Motor control package for controlling a rover using RoboClaw</description>
  
  <maintainer email="krish@todo.todo">krish</maintainer>
  <license>MIT</license>


  <!-- Runtime dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>ros2_roboclaw_driver</depend>
  <depend>scipy</depend> <!-- For quaternion conversion -->
  <depend>builtin_interfaces</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
